--- a/style.css
+++ b/style.css
@@ -81,7 +81,11 @@ body{
   border: 1px solid #ffff;
   background-color: rgba(17, 17, 17, 0.6);
   border-radius: 20px;
-  padding:10px 20px;
+  padding:20px 25px;
+}
+
+.future-forecast .today .w-icon{
+  width:150px;
 }
 .future-forecast .other{
   width: max-content;
